<resources>
    <string name="app_name">Notes.</string>
    <string name="enableBtn">Enable pop-up button</string>

    <string name="hintForSearch">Search for note</string>
    <string name="editTitleHint">Put title</string>
    <string name="editTextHint">Put notes</string>

    <string name="delete">delete</string>
    <string name="info">info</string>
    <string name="addNote">+</string>

    <string name="contentDescriptionSettings">Settings button</string>
    <string name="contentDescriptionNoteOptions">Note options</string>
    <string name="contentDescriptionAddNote">Add note button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
