<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.OpenNoteScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/contentBack"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/titleBack">


            <EditText
                android:id="@+id/editTitle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/editTitleHint"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:textColor="@color/titleText"
                android:textColorHighlight="@color/titleText"
                android:textColorHint="@color/titleText"
                android:textCursorDrawable="@drawable/color_cursor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonOK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <ImageButton
                android:id="@+id/buttonOK"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="@string/contentDescriptionAddNote"
                android:scaleType="fitCenter"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_background"
            android:cursorVisible="true"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/editTextHint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            android:padding="8dp"
            android:textColor="@color/contentText"
            android:textColorHint="@color/contentText"
            android:textCursorDrawable="@drawable/color_cursor" />

    </LinearLayout>

</FrameLayout>