<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/contentBack"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/titleBack">


            <ImageButton
                android:id="@+id/buttonSettings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="false"
                android:background="@color/transparent"
                android:contentDescription="@string/contentDescriptionSettings"
                android:foregroundGravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/options" />

            <TextView
                android:id="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.529"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="serif"
                android:text="@string/app_name"
                android:textColor="@color/appName"
                android:textSize="46sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buttonAddNote"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/plus"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="@string/contentDescriptionAddNote"
                android:scaleType="fitCenter" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <EditText
                android:id="@+id/editText2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_background"
                android:ems="10"
                android:hint="@string/hintForSearch"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColorHint="@color/contentText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/list_item" />

    </LinearLayout>

</FrameLayout>